refactor: изменить структуру компонентов

--- a/src/pages/login/Login/Login.css
+++ b/src/pages/login/Login/Login.css
@@ -23,7 +23,7 @@
 }
 
 .auth__logo {
-  background-image: url(../../images/logo-main.svg);
+  background-image: url(../../../images/logo-main.svg);
   width: 38px;
   min-height: 38px;
   background-repeat: no-repeat;
