--- a/src/pages/main/Promo/Promo.css
+++ b/src/pages/main/Promo/Promo.css
@@ -15,7 +15,7 @@
 .promo__logo {
   min-width: 310px;
   min-height: 304px;
-  background-image: url(../../images/logo-promo.svg);
+  background-image: url(../../../images/logo-promo.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
