--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -1,3 +1,5 @@
 @import "../vendor/normalize.scss";
 @import "../vendor/fonts/fonts";
 @import "./global";
+
+@import "../components/Header/Header";
