--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -1,4 +1,5 @@
 @import "../../sassStyles/vars";
+@import "../../sassStyles/mixins";
 
 .header {
   background-color: $background-dark;
@@ -38,13 +39,8 @@
 }
 
 .header__link {
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
+  @include font-links(12px, 500, 16px);
   margin: 0;
-  cursor: pointer;
-  transition: $transition-setting;
-  text-decoration: none;
   color: $link-dark;
 }
 
@@ -67,25 +63,25 @@
   margin-left: 30px;
 }
 
-@media screen and (max-width: $screen-desctop) {
+@include desctopBreakPoint() {
   .header__container {
     width: $full-width;
   }
 }
 
-@media screen and (max-width: $screen-tablet) {
+@include tabletBreakPoint() {
   .header {
     padding: 0 50px;
   }
 }
 
-@media screen and (max-width: $screen-tablet-mini) {
+@include tabletMiniBreakPoint() {
   .header {
     padding: 0 30px;
   }
 }
 
-@media screen and (max-width: $screen-mobile) {
+@include mobileBreakPoint() {
   .header {
     padding: 0 14px;
   }
