--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -1,9 +1,11 @@
+// цветовые наборы
 $background-dark: #073042;
 $background-light: #FFF;
 $color-green: #2BE080;
 $link-dark: #000;
 $link-light: #FFF;
 
+// размеры экранов
 $full-width: 100%;
 $content-desctop: 1140px;
 $screen-desctop: 1280px;
@@ -11,6 +13,7 @@ $screen-tablet: 1000px;
 $screen-tablet-mini: 800px;
 $screen-mobile: 500px;
 
+// переходы и трансформации
 $transition-setting: .5s ease;
 $opacity-value: .7;
 
