--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -63,25 +63,25 @@
   margin-left: 30px;
 }
 
-@include desctopBreakPoint() {
+@include breakPoint($screen-desctop) {
   .header__container {
     width: $full-width;
   }
 }
 
-@include tabletBreakPoint() {
+@include breakPoint($screen-tablet) {
   .header {
     padding: 0 50px;
   }
 }
 
-@include tabletMiniBreakPoint() {
+@include breakPoint($screen-tablet-mini) {
   .header {
     padding: 0 30px;
   }
 }
 
-@include mobileBreakPoint() {
+@include breakPoint($screen-mobile) {
   .header {
     padding: 0 14px;
   }
