refactor: Promo переделать на scss

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -55,7 +55,7 @@
 .header__link_type_login {
   min-height: 32px;
   width: 76px;
-  background-color: $color-green;
+  background-color: $color-button-green;
   border-radius: 3px;
   display: flex;
   justify-content: center;
