--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -1,14 +1,17 @@
 // цветовые наборы
 $background-dark: #073042;
 $background-light: #FFF;
-$color-green: #2BE080;
+$color-button-green: #2BE080;
+$color-button-light: #FFF;
 $link-dark: #000;
 $link-light: #FFF;
+$text-light: #FFF;
 
 // размеры экранов
 $full-width: 100%;
 $content-desctop: 1140px;
 $screen-desctop: 1280px;
+$screen-desctop-mini: 1100px;
 $screen-tablet: 1000px;
 $screen-tablet-mini: 800px;
 $screen-mobile: 500px;
