--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -3,3 +3,8 @@
 @import "./global";
 
 @import "../components/Header/Header";
+@import "../pages/main/Promo/Promo";
+
+* {
+	// outline: 1px dashed red;
+}
