--- a/src/pages/main/Promo/_Promo.scss
+++ b/src/pages/main/Promo/_Promo.scss
@@ -1,7 +1,9 @@
+@import "../../../sassStyles/vars";
+
 .promo {
   display: flex;
   justify-content: center;
-  background-color: #073042;
+  background-color: $background-dark;
   padding: 75px 70px;
 }
 
@@ -9,32 +11,28 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-  width: 1140px;
+  width: $content-desctop;
 }
 
 .promo__logo {
   min-width: 310px;
   min-height: 304px;
-  background-image: url(../../../images/logo-promo.svg);
+  background-image: url(./images/logo-promo.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .promo__title {
-  font-size: 50px;
-  font-weight: 400;
-  line-height: 58px;
-  color: #FFF;
+  @include font-text(50px, 400, 58px);
+  color: $text-light;
   max-width: 640px;
   margin: 0 20px 0 0
 }
 
 .promo__subtitle {
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 16px;
+  @include font-text(13px, 400, 16px);
   margin: 36px 0 0;
-  color: #FFF;
+  color: $text-light;
   max-width: 310px;
   opacity: .5;
 }
@@ -55,40 +53,34 @@
 .promo__button {
   width: 129px;
   min-height: 36px;
-  border: 1px solid #FFF;
+  border: 1px solid $color-button-light;
   border-radius: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
+  @include font-links(12px, 500, 16px);
   color: #FFF;
-  text-decoration: none;
-  cursor: pointer;
-  transition: .5s ease;
   box-sizing: border-box;
 }
 
 .promo__button:hover {
-  opacity: .7;
+  opacity: $opacity-value;
 }
 
-@media screen and (max-width: 1280px) {
+@include breakPoint($screen-desctop) {
   .promo__container {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 1100px) {
+@include breakPoint($screen-desctop-mini) {
   .promo__title {
-    font-size: 40px;
-    line-height: 50px;
+    @include font-text(40px, 400, 50px);
     max-width: 520px;
   }
 }
 
-@media screen and (max-width: 1000px) {
+@include breakPoint($screen-tablet) {
   .promo {
     padding: 140px 30px 75px;
   }
@@ -121,7 +113,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@include breakPoint($screen-mobile) {
   .promo {
     padding: 70px 8px 30px;
   }
