refactor: применить вложенность элементов в компонентах Header и Promo

--- a/src/pages/main/Promo/_Promo.scss
+++ b/src/pages/main/Promo/_Promo.scss
@@ -5,137 +5,139 @@
   justify-content: center;
   background-color: $background-dark;
   padding: 75px 70px;
-}
 
-.promo__container {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  width: $content-desctop;
-}
-
-.promo__logo {
-  min-width: 310px;
-  min-height: 304px;
-  background-image: url(./images/logo-promo.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.promo__title {
-  @include font-text(50px, 400, 58px);
-  color: $text-light;
-  max-width: 640px;
-  margin: 0 20px 0 0
-}
-
-.promo__subtitle {
-  @include font-text(13px, 400, 16px);
-  margin: 36px 0 0;
-  color: $text-light;
-  max-width: 310px;
-  opacity: .5;
-}
-
-.promo__nav-tab {
-  padding: 0;
-  margin: 146px 0 0;
-  display: flex;
-  gap: 10px;
-}
-
-.promo__nav-tab-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.promo__button {
-  width: 129px;
-  min-height: 36px;
-  border: 1px solid $color-button-light;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  @include font-links(12px, 500, 16px);
-  color: #FFF;
-  box-sizing: border-box;
-}
-
-.promo__button:hover {
-  opacity: $opacity-value;
-}
-
-@include breakPoint($screen-desctop) {
-  .promo__container {
-    width: 100%;
-  }
-}
-
-@include breakPoint($screen-desctop-mini) {
-  .promo__title {
-    @include font-text(40px, 400, 50px);
-    max-width: 520px;
-  }
-}
-
-@include breakPoint($screen-tablet) {
-  .promo {
-    padding: 140px 30px 75px;
-  }
-
-  .promo__container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .promo__title {
-    text-align: center;
-    max-width: 640px;
-    margin: 48px 0 0
-  }
-
-  .promo__info {
+  &__container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: $content-desctop;
   }
 
-  .promo__subtitle {
-    margin: 22px 0 0;
-    max-width: 260px;
-    text-align: center;
+  &__logo {
+    min-width: 310px;
+    min-height: 304px;
+    background-image: url(./images/logo-promo.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 
-  .promo__nav-tab {
-    margin: 92px 0 0;
-  }
-}
-
-@include breakPoint($screen-mobile) {
-  .promo {
-    padding: 70px 8px 30px;
+  &__title {
+    @include font-text(50px, 400, 58px);
+    color: $text-light;
+    max-width: 640px;
+    margin: 0 20px 0 0
   }
 
-  .promo__logo {
-    min-width: 210px;
-    min-height: 206px;
+  &__subtitle {
+    @include font-text(13px, 400, 16px);
+    margin: 36px 0 0;
+    color: $text-light;
+    max-width: 310px;
+    opacity: .5;
   }
 
-  .promo__title {
-    margin: 45px 0 0;
-    font-size: 28px;
-    line-height: 38px;
-  }
-
-  .promo__subtitle {
-    margin: 25px 0 0;
-  }
-
-  .promo__nav-tab {
-    margin: 78px 0 0;
-    flex-direction: column;
+  &__nav-tab {
+    padding: 0;
+    margin: 146px 0 0;
+    display: flex;
     gap: 10px;
   }
+
+  &__nav-tab-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__button {
+    width: 129px;
+    min-height: 36px;
+    border: 1px solid $color-button-light;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include font-links(12px, 500, 16px);
+    color: #FFF;
+    box-sizing: border-box;
+
+    &:hover {
+      opacity: $opacity-value;
+    }
+  }
+
+  @include breakPoint($screen-desctop) {
+    &__container {
+      width: $full-width;
+    }
+  }
+
+  @include breakPoint($screen-desctop-mini) {
+    &__title {
+      @include font-text(40px, 400, 50px);
+      max-width: 520px;
+    }
+  }
+
+
+  @include breakPoint($screen-tablet) {
+    & {
+      padding: 140px 30px 75px;
+    }
+
+    &__container {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__title {
+      text-align: center;
+      max-width: 640px;
+      margin: 48px 0 0
+    }
+
+    &__info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__subtitle {
+      margin: 22px 0 0;
+      max-width: 260px;
+      text-align: center;
+    }
+
+    &__nav-tab {
+      margin: 92px 0 0;
+    }
+  }
+
+  @include breakPoint($screen-mobile) {
+    & {
+      padding: 70px 8px 30px;
+    }
+  
+    &__logo {
+      min-width: 210px;
+      min-height: 206px;
+    }
+  
+    &__title {
+      margin: 45px 0 0;
+      font-size: 28px;
+      line-height: 38px;
+    }
+  
+    &__subtitle {
+      margin: 25px 0 0;
+    }
+  
+    &__nav-tab {
+      margin: 78px 0 0;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
+
