--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -6,93 +6,93 @@
   display: flex;
   justify-content: center;
   padding: 0 70px;
-}
 
-.header_light {
-  background-color: $background-light;
-}
-
-.header__container {
-  min-height: 74px;
-  width: $content-desctop;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header__logo {
-  background-image: url(./images/logo-main.svg);
-  min-width: 38px;
-  min-height: 38px;
-  background-repeat: no-repeat;
-  background-size: contain;
-  transition: $transition-setting;
-}
-
-.header__logo:hover {
-  opacity: $opacity-value;
-}
-
-.header__links-authorization {
-  display: flex;
-  align-items: center;
-}
-
-.header__link {
-  @include font-links(12px, 500, 16px);
-  margin: 0;
-  color: $link-dark;
-}
-
-.header__link:hover {
-  opacity: $opacity-value;
-}
-
-.header__link_type_light {
-  color: $link-light;
-}
-
-.header__link_type_login {
-  min-height: 32px;
-  width: 76px;
-  background-color: $color-button-green;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 30px;
-}
-
-@include breakPoint($screen-desctop) {
-  .header__container {
-    width: $full-width;
-  }
-}
-
-@include breakPoint($screen-tablet) {
-  .header {
-    padding: 0 50px;
-  }
-}
-
-@include breakPoint($screen-tablet-mini) {
-  .header {
-    padding: 0 30px;
-  }
-}
-
-@include breakPoint($screen-mobile) {
-  .header {
-    padding: 0 14px;
+  &_light {
+    background-color: $background-light;
   }
 
-  .header__link_type_login {
-    min-height: 26px;
-    width: 54px;
-    margin-left: 14px;
+  &__container {
+    min-height: 74px;
+    width: $content-desctop;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  .header__link {
-    font-size: 10px;
+  &__logo {
+    background-image: url(./images/logo-main.svg);
+    min-width: 38px;
+    min-height: 38px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    transition: $transition-setting;
+
+    &:hover {
+      opacity: $opacity-value;
+    }
+  }
+
+  &__links-authorization {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    @include font-links(12px, 500, 16px);
+    margin: 0;
+    color: $link-dark;
+
+    &:hover {
+      opacity: $opacity-value;
+    }
+
+    &_type_light {
+      color: $link-light;
+    }
+
+    &_type_login {
+      min-height: 32px;
+      width: 76px;
+      background-color: $color-button-green;
+      border-radius: 3px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 30px;
+    }
+  }
+
+  @include breakPoint($screen-desctop) {
+    &__container {
+      width: $full-width;
+    }
+  }
+  
+  @include breakPoint($screen-tablet) {
+    & {
+      padding: 0 50px;
+    }
+  }
+  
+  @include breakPoint($screen-tablet-mini) {
+    & {
+      padding: 0 30px;
+    }
+  }
+  
+  @include breakPoint($screen-mobile) {
+    & {
+      padding: 0 14px;
+    }
+  
+    &__link_type_login {
+      min-height: 26px;
+      width: 54px;
+      margin-left: 14px;
+    }
+  
+    &__link {
+      font-size: 10px;
+    }
   }
 }
