--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -5,6 +5,6 @@
 @import "../components/Header/Header";
 @import "../pages/main/Promo/Promo";
 
-* {
-	// outline: 1px dashed red;
-}
+// * {
+// 	outline: 1px dashed red;
+// }
