--- a/src/index.css
+++ b/src/index.css
@@ -249,8 +249,8 @@ select:-webkit-autofill:focus {
 }
 .header__link {
   font-size: 12px;
-  font-weight: 500;
   line-height: 16px;
+  font-weight: 500;
   cursor: pointer;
   transition: 0.5s ease;
   text-decoration: none;
@@ -323,16 +323,16 @@ select:-webkit-autofill:focus {
 }
 .promo__title {
   font-size: 50px;
-  font-weight: 400;
   line-height: 58px;
+  font-weight: 400;
   color: #FFF;
   max-width: 640px;
   margin: 0 20px 0 0;
 }
 .promo__subtitle {
   font-size: 13px;
-  font-weight: 400;
   line-height: 16px;
+  font-weight: 400;
   margin: 36px 0 0;
   color: #FFF;
   max-width: 310px;
@@ -358,8 +358,8 @@ select:-webkit-autofill:focus {
   justify-content: center;
   align-items: center;
   font-size: 12px;
-  font-weight: 500;
   line-height: 16px;
+  font-weight: 500;
   cursor: pointer;
   transition: 0.5s ease;
   text-decoration: none;
@@ -377,8 +377,8 @@ select:-webkit-autofill:focus {
 @media screen and (max-width: 1100px) {
   .promo__title {
     font-size: 40px;
-    font-weight: 400;
     line-height: 50px;
+    font-weight: 400;
     max-width: 520px;
   }
 }
@@ -421,6 +421,7 @@ select:-webkit-autofill:focus {
     margin: 45px 0 0;
     font-size: 28px;
     line-height: 38px;
+    font-weight: 400;
   }
   .promo__subtitle {
     margin: 25px 0 0;
@@ -429,5 +430,263 @@ select:-webkit-autofill:focus {
     margin: 78px 0 0;
     flex-direction: column;
     gap: 10px;
+  }
+}
+
+.about-project {
+  display: flex;
+  justify-content: center;
+  padding: 110px 70px;
+}
+.about-project__container {
+  width: 1140px;
+}
+.about-project__title {
+  font-size: 22px;
+  line-height: 27px;
+  font-weight: 400;
+  margin: 0;
+  min-height: 50px;
+  border-bottom: 1px solid #000;
+  letter-spacing: -0.88px;
+}
+.about-project__info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+.about-project__info-title {
+  margin: 70px 0 0;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: -0.8px;
+}
+.about-project__info-subtitle {
+  margin: 26px 0 0;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+}
+.about-project__time-line {
+  margin-top: 110px;
+  min-height: 36px;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+.about-project__time-line-text {
+  margin: 0;
+  font-size: 14px;
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  background-color: #F2F2F2;
+}
+.about-project__time-line-text:first-of-type {
+  background-color: #2BE080;
+}
+.about-project__time-name {
+  margin-top: 14px;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+.about-project__time-name-text {
+  margin: 0;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+  text-align: center;
+  color: #A0A0A0;
+}
+@media screen and (max-width: 1280px) {
+  .about-project__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .about-project {
+    padding: 90px 50px;
+  }
+  .about-project__info {
+    gap: 30px;
+  }
+  .about-project__info-subtitle {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 22px 0 0;
+  }
+  .about-project__time-line {
+    margin-top: 93px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .about-project {
+    padding: 70px 18px;
+  }
+  .about-project__title {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    letter-spacing: -0.72px;
+  }
+  .about-project__info {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0;
+  }
+  .about-project__info-title {
+    margin: 58px 0 0;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    letter-spacing: -0.7px;
+  }
+  .about-project__info-subtitle {
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 400;
+    margin: 16px 0 0;
+  }
+  .about-project__time-line {
+    margin-top: 60px;
+    min-height: 35px;
+    grid-template-columns: 1fr 2fr;
+  }
+  .about-project__time-line-text {
+    font-size: 11px;
+    line-height: 35px;
+    font-weight: 400;
+  }
+  .about-project__time-name {
+    margin-top: 10px;
+    grid-template-columns: 1fr 2fr;
+  }
+  .about-project__time-name-text {
+    font-size: 11px;
+    line-height: 13px;
+    font-weight: 500;
+  }
+}
+
+.techs {
+  background-color: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  padding: 100px 70px;
+}
+.techs__container {
+  width: 1140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.techs__title {
+  margin: 0;
+  font-size: 22px;
+  line-height: 27px;
+  font-weight: 400;
+  min-height: 50px;
+  border-bottom: 1px solid #000;
+  letter-spacing: -0.88px;
+  width: 100%;
+}
+.techs__subtitle {
+  font-size: 50px;
+  line-height: 58px;
+  font-weight: 400;
+  margin: 90px 0 0;
+  letter-spacing: -2px;
+}
+.techs__subtitle-info {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  text-align: center;
+  max-width: 460px;
+  margin: 26px 0 0;
+  letter-spacing: -0.56px;
+}
+.techs__grid {
+  width: calc(100vw - 180px);
+  max-width: 700px;
+  margin: 100px 0 0;
+  list-style-type: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 90px);
+  gap: 10px;
+  justify-content: center;
+}
+.techs__grid-item {
+  min-height: 60px;
+  border-radius: 10px;
+  background-color: #E8E8E8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  letter-spacing: -0.56px;
+}
+@media screen and (max-width: 1280px) {
+  .techs__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .techs {
+    padding: 90px 50px;
+  }
+  .techs__subtitle {
+    margin: 80px 0 0;
+  }
+  .techs__subtitle-info {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 22px 0 0;
+  }
+  .techs__grid {
+    width: calc(100vw - 110px);
+    max-width: 650px;
+    margin: 83px 0 0;
+    grid-template-columns: repeat(auto-fit, 84px);
+  }
+  .techs__grid-item {
+    min-height: 57px;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 500px) {
+  .techs {
+    padding: 70px 18px;
+  }
+  .techs__title {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    letter-spacing: -0.72px;
+  }
+  .techs__subtitle {
+    margin: 60px 0 0;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 400;
+    letter-spacing: -1.2px;
+  }
+  .techs__subtitle-info {
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 400;
+    margin: 24px 0 0;
+  }
+  .techs__grid {
+    width: calc(100vw - 60px);
+    margin: 50px 0 0;
   }
 }/*# sourceMappingURL=index.css.map */
