--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -4,6 +4,8 @@
 
 @import "../components/Header/Header";
 @import "../pages/main/Promo/Promo";
+@import "../pages/main/AboutProject/AboutProject";
+@import "../pages/main/Techs/Techs";
 
 // * {
 // 	outline: 1px dashed red;
