refactor: переделать секцию AboutMe с CSS на SCSS

--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -14,7 +14,9 @@ $screen-desctop: 1280px;
 $screen-desctop-mini: 1100px;
 $screen-tablet: 1000px;
 $screen-tablet-mini: 800px;
+$screen-mobile-maxi: 700px;
 $screen-mobile: 500px;
+$screen-mobile-mini: 450px;
 
 // переходы и трансформации
 $transition-setting: .5s ease;
