--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -6,6 +6,7 @@
 @import "../pages/main/Promo/Promo";
 @import "../pages/main/AboutProject/AboutProject";
 @import "../pages/main/Techs/Techs";
+@import "../pages/main/AboutMe/AboutMe";
 
 // * {
 // 	outline: 1px dashed red;
