--- a/src/index.css
+++ b/src/index.css
@@ -689,4 +689,161 @@ select:-webkit-autofill:focus {
     width: calc(100vw - 60px);
     margin: 50px 0 0;
   }
+}
+
+.about-me {
+  display: flex;
+  justify-content: center;
+  padding: 110px 70px 100px;
+}
+.about-me__container {
+  width: 1140px;
+  display: flex;
+  flex-direction: column;
+}
+.about-me__title {
+  font-size: 22px;
+  line-height: 27px;
+  font-weight: 400;
+  margin: 0;
+  min-height: 50px;
+  border-bottom: 1px solid #000;
+  letter-spacing: -0.88px;
+}
+.about-me__info {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 66px;
+}
+.about-me__name {
+  font-size: 50px;
+  line-height: 58px;
+  font-weight: 400;
+  margin: 0;
+  max-width: 600px;
+  letter-spacing: -2px;
+}
+.about-me__profession {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 500;
+  margin: 18px 0 0;
+  max-width: 600px;
+}
+.about-me__biography {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  margin: 26px 0 100px;
+  max-width: 600px;
+}
+.about-me__link {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.5s ease;
+  text-decoration: none;
+  margin: 0;
+  text-decoration: none;
+  transition: 0.5s ease;
+}
+.about-me__link:hover {
+  opacity: 0.7;
+}
+.about-me__photo {
+  width: 270px;
+  height: 327px;
+  background-size: contain;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-left: 50px;
+}
+@media screen and (max-width: 1280px) {
+  .about-me__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .about-me {
+    padding: 90px 50px;
+  }
+  .about-me__name {
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 400;
+  }
+  .about-me__profession {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 16px 0 0;
+  }
+  .about-me__biography {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 20px 0 87px;
+  }
+  .about-me__photo {
+    width: 255px;
+    height: 307px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .about-me {
+    padding: 70px 50px;
+  }
+  .about-me__info {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-top: 60px;
+  }
+  .about-me__photo {
+    margin-left: 0;
+  }
+  .about-me__name {
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 400;
+    margin: 40px 0 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .about-me {
+    padding: 70px 14px;
+  }
+  .about-me__title {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    letter-spacing: -0.72px;
+  }
+  .about-me__photo {
+    height: 352px;
+  }
+  .about-me__name {
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 400;
+    letter-spacing: -1.2px;
+  }
+  .about-me__profession {
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 400;
+    margin: 20px 0 0;
+  }
+  .about-me__biography {
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 400;
+    margin: 20px 0 40px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .about-me__photo {
+    width: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
