--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -6,6 +6,8 @@ $color-button-light: #FFF;
 $link-dark: #000;
 $link-light: #FFF;
 $text-light: #FFF;
+$text-grey: #A0A0A0;
+$line-grey: #E8E8E8;
 
 // размеры экранов
 $full-width: 100%;
