--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -7,6 +7,7 @@
 @import "../pages/main/AboutProject/AboutProject";
 @import "../pages/main/Techs/Techs";
 @import "../pages/main/AboutMe/AboutMe";
+@import "../pages/main/Portfolio/Portfolio";
 
 // * {
 // 	outline: 1px dashed red;
