--- a/src/pages/main/Techs/_Techs.scss
+++ b/src/pages/main/Techs/_Techs.scss
@@ -15,8 +15,8 @@
   }
 
   &__title {
-    margin: 0;
     @include font-text(22px, 27px);
+    margin: 0;
     min-height: 50px;
     border-bottom: 1px solid #000;
     letter-spacing: -0.88px;
@@ -50,13 +50,13 @@
   }
 
   &__grid-item {
+    @include font-text(14px, 17px);
     min-height: 60px;
     border-radius: 10px;
-    background-color: #E8E8E8;
+    background-color: $line-grey;
     display: flex;
     align-items: center;
     justify-content: center;
-    @include font-text(14px, 17px);
     letter-spacing: -0.56px;
   }
 
@@ -88,8 +88,8 @@
     }
   
     &__grid-item {
-      min-height: 57px;
       @include font-text(12px, 15px);
+      min-height: 57px;
       box-sizing: border-box;
     }
   }
@@ -105,8 +105,8 @@
     }
   
     &__subtitle {
-      margin: 60px 0 0;
       @include font-text(30px, 36px);
+      margin: 60px 0 0;
       letter-spacing: -1.2px;
     }
   
