--- a/src/index.css
+++ b/src/index.css
@@ -943,4 +943,62 @@ select:-webkit-autofill:focus {
     min-height: 12px;
     margin-top: 8px;
   }
+}
+
+.auth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+.auth__container {
+  display: flex;
+  flex-direction: column;
+}
+.auth__link {
+  display: block;
+  cursor: pointer;
+  transition: 0.5s ease;
+  width: 38px;
+}
+.auth__link:hover {
+  opacity: 0.7;
+}
+.auth__logo {
+  background-image: url(./images/logo-main.svg);
+  width: 38px;
+  min-height: 38px;
+  background-repeat: no-repeat;
+}
+.auth__title {
+  margin: clamp(10px, 6vh, 42px) 0;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 500;
+}
+@media screen and (max-width: 800px) {
+  .auth {
+    padding: 0 30px;
+  }
+  .auth__title {
+    margin: 4vh 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .auth {
+    padding: 0 30px;
+    min-height: 100dvh;
+  }
+  .auth__container {
+    align-items: center;
+    width: 100%;
+  }
+  .auth__logo {
+    margin-top: min(35px, 4.5dvh);
+  }
+  .auth__title {
+    margin: clamp(20px, 7dvh, 50px) 0 clamp(20px, 10.5dvh, 82px);
+    text-align: center;
+  }
 }/*# sourceMappingURL=index.css.map */
