--- a/src/index.css
+++ b/src/index.css
@@ -1001,4 +1001,105 @@ select:-webkit-autofill:focus {
     margin: clamp(20px, 7dvh, 50px) 0 clamp(20px, 10.5dvh, 82px);
     text-align: center;
   }
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 80px 70px 20px;
+}
+.footer__container {
+  width: 1140px;
+}
+.footer__title {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  margin: 0;
+  color: #A0A0A0;
+  text-align: center;
+  min-height: 37px;
+  border-bottom: 1px solid #E8E8E8;
+}
+.footer__info {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__copyright {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  margin: 20px 0 0;
+}
+.footer__links {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 18px 0 0;
+}
+.footer__list {
+  margin: 0 0 0 20px;
+}
+.footer__link {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  transition: 0.5s ease;
+  text-decoration: none;
+  margin: 0;
+  transition: 0.5s ease;
+}
+.footer__link:hover {
+  opacity: 0.7;
+}
+@media screen and (max-width: 1280px) {
+  .footer__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .footer {
+    padding: 80px 30px 20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .footer {
+    padding: 80px 10px 20px;
+  }
+  .footer__title {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+  }
+  .footer__info {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .footer__copyright {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+    margin: 28px 0 0;
+  }
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+    margin: 28px 0 0;
+  }
+  .footer__list {
+    margin: 0;
+  }
+  .footer__list:first-of-type {
+    margin-bottom: 10px;
+  }
+  .footer__link {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.5s ease;
+    text-decoration: none;
+  }
 }/*# sourceMappingURL=index.css.map */
