refactor: переделать CSS на SCSS в компоненте Form

--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -3,11 +3,14 @@ $background-dark: #073042;
 $background-light: #FFF;
 $color-button-green: #2BE080;
 $color-button-light: #FFF;
+$color-button-blue: #3456F3;
 $link-dark: #000;
 $link-light: #FFF;
 $text-light: #FFF;
 $text-grey: #A0A0A0;
+$text-red: #FF3055;
 $line-grey: #E8E8E8;
+$line-blue: #3456F3;
 
 // размеры экранов
 $full-width: 100%;
