--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -9,7 +9,8 @@
 @import "../pages/main/AboutMe/AboutMe";
 @import "../pages/main/Portfolio/Portfolio";
 @import "../pages/login/Login/Login";
-@import "../components/Footer/Footer"
+@import "../components/Footer/Footer";
+@import "../components/Form/Form";
 
 
 // * {
