--- a/src/index.css
+++ b/src/index.css
@@ -1102,4 +1102,131 @@ select:-webkit-autofill:focus {
     transition: 0.5s ease;
     text-decoration: none;
   }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 396px;
+}
+.form__container {
+  display: flex;
+  flex-direction: column;
+  min-height: clamp(210px, 41vh, 350px);
+}
+.form__label {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 400;
+  color: #A0A0A0;
+  margin: 0;
+}
+.form__input {
+  border: none;
+  border-bottom: 1px solid #E8E8E8;
+  min-height: 28px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.form__input:focus {
+  border: none;
+  border-bottom: 1px solid #3456F3;
+  outline: none;
+}
+.form__input_type_error {
+  color: #FF3055;
+}
+.form__input-error {
+  min-height: 22px;
+  margin: 3px 0;
+  font-size: 10px;
+  line-height: 11px;
+  font-weight: 400;
+  color: #FF3055;
+}
+.form__buttons-container {
+  display: flex;
+  flex-direction: column;
+  width: 396px;
+  margin: 10px 0 0;
+}
+.form__error {
+  color: #FF004C;
+  text-align: center;
+  font-size: 11px;
+  line-height: 14px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  min-height: 14px;
+}
+.form__button {
+  min-height: 45px;
+  border: none;
+  border-radius: 5px;
+  color: #FFF;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+  transition: 0.5s ease;
+  cursor: pointer;
+  margin: 0 0 16px;
+}
+.form__button:hover {
+  opacity: 0.7;
+}
+.form__button_type_active {
+  background-color: #3456F3;
+}
+.form__button_type_inactive {
+  background-color: #F8F8F8;
+  color: #C2C2C2;
+  pointer-events: none;
+}
+.form__login {
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  color: #A0A0A0;
+  text-align: center;
+  margin: 0;
+}
+.form__login-link {
+  text-decoration: none;
+  color: #3456F3;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.form__login-link:hover {
+  opacity: 0.7;
+}
+@media screen and (max-width: 800px) {
+  .form__container {
+    min-height: clamp(210px, 28.5vh, 350px);
+  }
+}
+@media screen and (max-width: 500px) {
+  .form {
+    width: 100%;
+  }
+  .form__container {
+    min-height: clamp(205px, 100dvh - 413px, 400px);
+  }
+  .form__buttons-container {
+    width: 100%;
+    margin: 10px 0 10px;
+  }
+  .form__button {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    margin: 10px 0 14px;
+  }
+  .form__login {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+  }
 }/*# sourceMappingURL=index.css.map */
