--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -11,6 +11,7 @@
 @import "../pages/login/Login/Login";
 @import "../components/Footer/Footer";
 @import "../components/Form/Form";
+@import "../components/InfoTooltip/InfoTooltip";
 
 
 // * {
