refactor: переделать CSS в компоненте MoviesCard на SCSS

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -12,6 +12,7 @@
 @import "../components/Footer/Footer";
 @import "../components/Form/Form";
 @import "../components/InfoTooltip/InfoTooltip";
+@import "../components/MoviesCard/MoviesCard";
 
 
 // * {
