--- a/src/index.css
+++ b/src/index.css
@@ -1319,4 +1319,99 @@ select:-webkit-autofill:focus {
     text-overflow: ellipsis;
     overflow: hidden;
   }
+}
+
+.movies-card {
+  display: grid;
+  align-self: flex-start;
+}
+.movies-card__image {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.movies-card__image:hover {
+  opacity: 0.7;
+}
+.movies-card__container {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #E8E8E8;
+  min-height: 61px;
+}
+.movies-card__name {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 500;
+  margin: 15px 0 0;
+  min-height: 32px;
+}
+.movies-card__favorites {
+  min-width: 24px;
+  height: 24px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s ease;
+  margin-top: 10px;
+  border: none;
+  background-image: url(./images/favorites.svg);
+  width: 11px;
+  min-height: 10px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.movies-card__favorites:hover {
+  opacity: 0.7;
+}
+.movies-card__favorites_active {
+  background-image: url(./images/favorites-active.svg);
+}
+.movies-card__favorites_delete {
+  background-image: url(./images/favorites-delete.svg);
+  opacity: 0;
+}
+.movies-card:hover .movies-card__favorites_delete {
+  opacity: 1;
+}
+.movies-card__time {
+  font-size: 11px;
+  line-height: 13px;
+  font-weight: 400;
+  color: #A0A0A0;
+  margin: 6px 0 0 0;
+}
+@media screen and (max-width: 800px) {
+  .movies-card__image {
+    min-height: 189px;
+  }
+  .movies-card__name {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .movies-card__image {
+    width: 100%;
+    min-height: 168px;
+  }
+  .movies-card__container {
+    min-height: 59px;
+  }
+  .movies-card__name {
+    font-size: 12px;
+    line-height: 15px;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+  }
+  .movies-card__time {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+  }
 }/*# sourceMappingURL=index.css.map */
