refactor: переделать CSS в компоненте MovieCardList на SCSS

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -13,6 +13,7 @@
 @import "../components/Form/Form";
 @import "../components/InfoTooltip/InfoTooltip";
 @import "../components/MoviesCard/MoviesCard";
+@import "../components/MoviesCardList/MoviesCardList";
 
 
 // * {
