refactor: переделать CSS в компоненте Navigation на SCSS

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -14,6 +14,7 @@
 @import "../components/InfoTooltip/InfoTooltip";
 @import "../components/MoviesCard/MoviesCard";
 @import "../components/MoviesCardList/MoviesCardList";
+@import "../components/Navigation/Navigation";
 
 
 // * {
