--- a/src/index.css
+++ b/src/index.css
@@ -1472,4 +1472,193 @@ select:-webkit-autofill:focus {
     grid-template-columns: 1fr;
     gap: 35px;
   }
+}
+
+.navigation {
+  width: 100%;
+}
+.navigation__button-menu {
+  display: none;
+}
+.navigation__container {
+  margin: 0 0 0 44px;
+  display: flex;
+  justify-content: space-between;
+}
+.navigation__links {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+.navigation__link {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  margin: 0;
+  text-decoration: none;
+  color: #000;
+  transition: 0.5s ease;
+  margin-right: 16px;
+}
+.navigation__link:hover {
+  opacity: 0.7;
+}
+.navigation__link_type_light {
+  color: #FFF;
+}
+.navigation__link_type_active {
+  font-weight: 500;
+}
+.navigation__link_type_main {
+  display: none;
+}
+.navigation__account {
+  display: flex;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.5s ease;
+  text-decoration: none;
+  color: #000;
+}
+.navigation__account:hover {
+  opacity: 0.7;
+}
+.navigation__account__light {
+  color: #FFF;
+}
+.navigation__icon-account {
+  background-image: url(./images/account-icon.svg);
+  width: 26px;
+  min-height: 30px;
+  background-repeat: no-repeat;
+  margin-left: 20px;
+  outline: 0;
+  border: 0;
+  padding: 0;
+  background-color: #E5E5E5;
+  cursor: pointer;
+  border-radius: 4px;
+  background-position: center;
+}
+@media screen and (max-width: 800px) {
+  .navigation__container {
+    margin: 0 0;
+    flex-direction: column;
+    align-items: center;
+    width: 520px;
+    height: 100dvh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: #FFF;
+    z-index: 3;
+    transition: right 0.5s;
+  }
+  .navigation__container_type_hide {
+    right: -100%;
+  }
+  .navigation__button-menu {
+    display: block;
+    width: 44px;
+    min-height: 44px;
+    background-repeat: no-repeat;
+    margin: 0;
+    cursor: pointer;
+    transition: 0.5s ease;
+    background-color: #FFF;
+    border: 0;
+    background-size: contain;
+    padding: 0;
+    position: absolute;
+    right: 30px;
+    top: 15px;
+    z-index: 5;
+  }
+  .navigation__button-menu:hover {
+    opacity: 0.7;
+  }
+  .navigation__button-menu_type_open {
+    background-image: url(./images/button-menu-open-black.svg);
+  }
+  .navigation__button-menu_type_light {
+    background-image: url(./images/button-menu-open-light.svg);
+    background-color: #073042;
+  }
+  .navigation__button-menu_type_close {
+    background-image: url(./images/button-menu-close.svg);
+    width: 25px;
+    min-height: 25px;
+    top: 25px;
+    right: 25px;
+    position: fixed;
+    background-color: #FFF;
+  }
+  .navigation__links {
+    flex-direction: column;
+    margin: 15.3vh 0 0;
+  }
+  .navigation__link {
+    display: block;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px;
+    min-height: 26px;
+    margin: 0 0 24px 0;
+    color: #000;
+  }
+  .navigation__link_type_active {
+    border-bottom: 2px solid #000;
+  }
+  .navigation__link_type_main {
+    display: block;
+  }
+  .navigation__account {
+    margin: 4vh 0 9vh;
+    line-height: 16px;
+    align-items: center;
+  }
+  .navigation__icon-account {
+    width: 26px;
+    min-height: 30px;
+  }
+  .navigation__overlay {
+    background-color: #000;
+    width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    opacity: 0.3;
+    transition: 0.5s ease;
+  }
+}
+@media screen and (max-width: 545px) {
+  .navigation__container {
+    width: 100%;
+  }
+  .navigation__button-menu {
+    width: 37px;
+    min-height: 40px;
+    right: 15px;
+    top: 17px;
+  }
+  .navigation__button-menu_type_close {
+    width: 23px;
+    min-height: 23px;
+  }
+  .navigation__links {
+    margin: 18.3vh 0 0;
+  }
+  .navigation__link {
+    margin: 0 0 15px 0;
+    min-height: 30px;
+  }
+  .navigation__account {
+    margin: 4vh 0 6.2vh;
+  }
 }/*# sourceMappingURL=index.css.map */
