--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -15,6 +15,7 @@
 @import "../components/MoviesCard/MoviesCard";
 @import "../components/MoviesCardList/MoviesCardList";
 @import "../components/Navigation/Navigation";
+@import "../components/Preloader/Preloader";
 
 
 // * {
