refactor: переделать CSS на SCSS в компоненте SearchForm

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -16,6 +16,7 @@
 @import "../components/MoviesCardList/MoviesCardList";
 @import "../components/Navigation/Navigation";
 @import "../components/Preloader/Preloader";
+@import "../components/SearchForm/SearchForm";
 
 
 // * {
