refactor: переделать CSS на SCSS в компонентах Main и MoreMovies

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -8,6 +8,7 @@
 @import "../pages/main/Techs/Techs";
 @import "../pages/main/AboutMe/AboutMe";
 @import "../pages/main/Portfolio/Portfolio";
+@import "../pages/main/Main/Main";
 @import "../pages/login/Login/Login";
 @import "../components/Footer/Footer";
 @import "../components/Form/Form";
@@ -17,6 +18,7 @@
 @import "../components/Navigation/Navigation";
 @import "../components/Preloader/Preloader";
 @import "../components/SearchForm/SearchForm";
+@import "../pages/movies/MoreMovies/MoreMovies";
 
 
 // * {
