--- a/src/index.css
+++ b/src/index.css
@@ -945,6 +945,10 @@ select:-webkit-autofill:focus {
   }
 }
 
+.main {
+  flex: 1;
+}
+
 .auth {
   display: flex;
   flex-direction: column;
@@ -1913,5 +1917,44 @@ select:-webkit-autofill:focus {
   }
   .search-form__line {
     margin-top: 64px;
+  }
+}
+
+.more-movies {
+  display: flex;
+  justify-content: center;
+  padding: 50px 70px 78px;
+}
+.more-movies__container {
+  width: 1140px;
+  display: flex;
+  justify-content: center;
+}
+.more-movies__button {
+  width: 320px;
+  min-height: 36px;
+  background-color: #E5E5E5;
+  border: none;
+  border-radius: 6px;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+.more-movies__button:hover {
+  opacity: 0.7;
+}
+@media screen and (max-width: 1280px) {
+  .more-movies__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .more-movies {
+    padding: 50px 14px 78px;
+  }
+  .more-movies__button {
+    max-width: 240px;
   }
 }/*# sourceMappingURL=index.css.map */
