refactor: переделать CSS на SCSS в компонентах Movies и NotFound

--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -19,6 +19,8 @@
 @import "../components/Preloader/Preloader";
 @import "../components/SearchForm/SearchForm";
 @import "../pages/movies/MoreMovies/MoreMovies";
+@import "../pages/movies/Movies/Movies";
+@import "../pages/notFound/NotFound/NotFound";
 
 
 // * {
