--- a/src/index.css
+++ b/src/index.css
@@ -1957,4 +1957,86 @@ select:-webkit-autofill:focus {
   .more-movies__button {
     max-width: 240px;
   }
+}
+
+.movies {
+  flex: 1;
+}
+
+.not-found {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.not-found__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: calc(100vh - 120px);
+}
+.not-found__container-text {
+  text-align: center;
+  margin: 26.5vh 0 0;
+}
+.not-found__title {
+  font-size: 140px;
+  line-height: 170px;
+  font-weight: 400;
+  margin: 0 0 5px;
+}
+.not-found__subtitle {
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 400;
+  margin: 0;
+}
+.not-found__back {
+  text-decoration: none;
+  color: #3456F3;
+  cursor: pointer;
+  transition: 0.5s ease;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  background-color: #FFF;
+  border: none;
+  margin-top: 30px;
+}
+.not-found__back:hover {
+  opacity: 0.7;
+}
+@media screen and (max-width: 800px) {
+  .not-found__container {
+    min-height: calc(100vh - 445px);
+  }
+  .not-found__container-text {
+    margin: 18vh 0 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .not-found__container {
+    min-height: calc(100vh - 62px);
+  }
+  .not-found__container-text {
+    margin: 38.2vh 0 0;
+  }
+  .not-found__title {
+    font-size: 80px;
+    line-height: 97px;
+    font-weight: 400;
+    margin: 0 0 10px;
+  }
+  .not-found__subtitle {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+  }
+  .not-found__back {
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+  }
 }/*# sourceMappingURL=index.css.map */
