--- a/src/sassStyles/_vars.scss
+++ b/src/sassStyles/_vars.scss
@@ -4,14 +4,17 @@ $background-light: #FFF;
 $color-button-green: #2BE080;
 $color-button-light: #FFF;
 $color-button-blue: #3456F3;
+$color-button-inactive: #F8F8F8;
 $color-preloader: #2BE080;
 $link-dark: #000;
 $link-light: #FFF;
 $text-light: #FFF;
 $text-grey: #A0A0A0;
 $text-red: #FF3055;
+$text-green: #2BE080;
 $line-grey: #E8E8E8;
 $line-blue: #3456F3;
+$line-light: #FFF;
 
 // размеры экранов
 $full-width: 100%;
