--- a/src/sassStyles/index.scss
+++ b/src/sassStyles/index.scss
@@ -21,6 +21,8 @@
 @import "../pages/movies/MoreMovies/MoreMovies";
 @import "../pages/movies/Movies/Movies";
 @import "../pages/notFound/NotFound/NotFound";
+@import "../pages/profile/Profile/Profile";
+@import "../pages/savedMovies/SavedMovies/SavedMovies";
 
 
 // * {
